[metadata]
name = micropython-iot
description = Micropython IoT libraries and tools
long_description = file: README.rst
author = Daniel Mizyrycki
author_email = mzdaniel@glidelink.net
url = http://github.com/mzdaniel/micropython-iot'
version = attr: micropython_iot.__version__
license = MIT
keywords = micropython, iot, thingflow, sensors
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Utilities
    Topic :: Software Development :: Libraries
    Topic :: System :: Hardware

provides = micropython_iot

[options]
packages = find:
